--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "react-table": "^7.7.0",
+    "redux": "^4.1.0",
     "web-vitals": "^1.0.1"
+  },
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.9"
   },
   "scripts": {
     "start": "react-scripts start",
