--- a/package.json
+++ b/package.json
@@ -3,30 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@hookform/resolvers": "^2.5.2",
-    "@material-ui/core": "^4.11.4",
-    "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "axios": "^0.21.1",
-    "leaflet": "^1.7.1",
-    "lodash": "^4.17.21",
-    "notistack": "^1.0.9",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-hook-form": "^7.8.1",
-    "react-leaflet": "^3.2.0",
-    "react-redux": "^7.2.4",
+    "@hookform/resolvers": "2.5.2",
+    "@material-ui/core": "4.11.4",
+    "@material-ui/icons": "4.11.2",
+    "@testing-library/jest-dom": "5.11.4",
+    "@testing-library/react": "11.1.0",
+    "@testing-library/user-event": "12.1.10",
+    "axios": "0.21.1",
+    "leaflet": "1.7.1",
+    "lodash": "4.17.21",
+    "notistack": "1.0.9",
+    "prop-types": "15.7.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-hook-form": "7.8.1",
+    "react-leaflet": "3.2.0",
+    "react-redux": "7.2.4",
     "react-scripts": "4.0.3",
-    "react-table": "^7.7.0",
-    "redux": "^4.1.0",
-    "uuid": "^8.3.2",
-    "web-vitals": "^1.0.1",
-    "yup": "^0.32.9"
+    "react-table": "7.7.0",
+    "redux": "4.1.0",
+    "uuid": "8.3.2",
+    "web-vitals": "1.0.1",
+    "yup": "0.32.9"
   },
   "devDependencies": {
-    "redux-devtools-extension": "^2.13.9"
+    "redux-devtools-extension": "2.13.9"
   },
   "scripts": {
     "start": "react-scripts start",
